--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-ion-title{
-    color: aqua;
+.titulo{
+    font-family: 'DynaPuff', cursive;
+    -webkit-text-stroke: 0.5px rgba(0, 140, 255, 0.962);   
+    font-size: 30px; 
 }
+
 
 .fotodio{
     height: 10vh;
@@ -23,4 +26,14 @@ p{
 .fotodio{
     display: flex;
     justify-content: center;
+}
+
+ion-card{
+    background-color: rgb(231, 228, 228);
+    border-radius: 30px;
+}
+
+.form{
+    border-radius: 5px;
+    --ion-background-color: rgb(231, 225, 225);
 }
